<resources>
    <string name="app_name">Visit Banja Luka</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=etf.unibl.org.bltv</string>
    <string name="app_copyright">Elektrotehnički fakultet Banja Luka</string>
    <string name="rate_app">Rate this app</string>
    <string name="added_to_fav">added to favorites</string>
    <string name="removed_from_fav">removed from favorites</string>
    <string name="item">Item :</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="tab_news">News</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_manage">Settings</string>
    <string name="nav_about">About</string>
    <string name="version">1.05</string>
    <string name="tab_institutions">Institutions</string>
    <string name="tab_monuments">Monuments</string>
    <string name="tab_hotels">Hotels</string>
    <string name="tab_exit">Exit</string>
    <string name="tab_weather">Weather</string>
    <string name="tab_favourites">Favourites</string>
    <string name="celsius">°C</string>
    <string name="app_version">App version:</string>
    <string name="language">Language</string>
    <string name="language_msg">Select language to use</string>
    <string name="language_en">English</string>
    <string name="language_sr">Serbian</string>
    <string name="caching">Caching</string>
    <string name="caching_msg">This option if selected will allow us to cache news</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="content_description">Content Description</string>
    <string name="tab_events">Events</string>
    <string name="like_button">Like</string>
    <string name="search_hint">Search</string>
    <string name="database_name">bltv_db</string>
    <string name="pull_news">http://dtp.nezavisne.com/app/podrubrika/18/1/20</string>
    <string name="pull_article">http://dtp.nezavisne.com/app/v2/vijesti/</string>
    <string name="pull_weather">http://api.openweathermap.org/data/2.5/weather?q=Banja%20Luka,ba&amp;appid=3d27163de85684aaec32e42fa535675d</string>
    <string name="pull_icon">http://openweathermap.org/img/w/</string>
    <string name="pull_forecast">http://api.openweathermap.org/data/2.5/forecast?q=Banja%20Luka,,ba&amp;appid=137c3ccb11956779b7646b0aa2a01a6e</string>
    <string name="kastel_name">Tvrđava Kastel</string>
    <string name="kastel_description"><![CDATA[<p>Tvrđava Kastel je najstariji istorijski spomenik u gradu Banjaluci. Najstariji tragovi naselja na području Banjaluke su ostaci neolitskog gradinskog naselja koji su upravo pronađeni na prostoru gradske tvrđave Kastel. Nalazi se u središnjem dijelu grada, koji dominira lijevom obalom Vrbasa.<h1>Pretpostavke o nastanku tvrđave</h1>O vremenu nastanka ovog objekta ne postoje pouzdani podaci. Međutim, mnoge okolnosti upućuju na zaključak da se upravo tu nalazilo rimsko naselje Castra. Rimljani su bili izloženi čestim nasrtajima varvarskih naroda, a imali su svakako dovoljne jake razloge da brane cestu koja je prolazila kotlinom Vrbasa. U prilog ovakvim tvrdnjama idu i arheološki nalazi koji su pronađeni na prostoru današnjeg Kastela, a odnose se na rimsku keramiku, novac i građevinarstvo. Posebno važan nalaz je antički žrtvenik posvećen bogu Jupiteru pronađen 1885. godine prilikom gradnje mosta preko Crkvene. Takođe, na prostoru tvrđave pronađeni su ostaci Slavenskog naselja iz perioda ranog srednjeg vijeka (od VIII do XII vijeka). U bosanskoj srednjovjekovnoj državi postojao je Vrbaški grad, koji se po jednoj pretpostavci nalazio na mjestu današnjeg Kastela. Međutim, po drugoj pretpostavci, Vrbaški grad se identifikuje sa Podgradcima u Potkozarju.<h1>Intenzivna gradnja tvrđave</h1>Intezivna izgradnja Kastela počinje u pretposljednjoj deceniji XV vijeka, za vrijeme Turske okupacije i vladavine Ferhad paše Sokolovića (1574-1588) koji pored ovog utvrđenja gradi i niz drugih objekata orijentalnog tipa. Ferhad- paša na mjestu današnjeg Kastela prvo gradi svoju utvrđenu tophanu (arsenal), da bi, desetak godina kasnije, tophana prerasla u pravi utvrđeni grad sa kulama i tabijama, koji se neprestano dograđivao. Pošto leži na ušću Crkvene u Vrbas, od tvrđave su bila podignuta dva mosta. Jedan je išao preko Vrbasa, u blizini sadašnjeg Gradskog mosta, a drugi preko Crkvene. Most preko Vrbasa sačuvao se samo u jednoj staroj gravuri. Vrbas i Crkvenu povezivao je veliki opkop (šanac) tako da je tvrđava zapravo, svojevremeno, bila utvrđeno ostrvo kojeg su okruživale vode dviju rijeka. Na zidovima tvrđave je takođe bio i veliki drveni konak koji je gledao na Vrbas, kao i niz zidanih objekata iz perioda dok je u tvrđavi bila austrougarska vojska. Tvrđava ali i grad Banja Luka posebno dobijaju na značaju za vrijeme Austro-Ugarsko-Turskih ratova kao važan geostrateški centar.<h1>Tvrđava danas</h1>U planovima za sanaciju, restauraciju i revitalizaciju Kastela predviđeno je da se jedan dio ovih objekata obnovi, kako bi tvrđava dobila izgled što približniji nekadašnjem. Na prostoru same tvrđave nađeno je dosta arheoloških tragova, iz antičkih vremena, preko već spominjane slavenske nastambe do novijih kultura. U Kastelu se nalazi rimski sarkofag nađen u šargovcu, rimski miljokaz s nekadašnjeg puta Salona- Servitium. Danas je tvrđava Kastel spomenik I kategorije. U prošlosti Kastel je bio jako vojničko utvrđenje i štitio je kotlinu Vrbasa od neprijateljskih naleta. Tvrđava je sa svih strana opasana debelim kamenim zidovima, a u njenoj unutrašnjosti, pored ljetne pozornice, igrališta za djecu i nacionalnog restorana nalazi se i Kamena kuća u funkciji muzeja.</p>]]></string>
    <string name="kastel_url">https://upload.wikimedia.org/wikipedia/commons/d/dc/Vrbas67657.jpg</string>
    <string name="kastel_latitude">44.766527</string>
    <string name="kastel_longitude"> 17.190613</string>
    <string name="banj_name">Spomenik palim Krajišnicima u NOB-u</string>
    <string name="banj_description"><![CDATA[<p align="justify"><h1>Lokacija spomenika</h1></p>
<p align="justify">Spomenik palim Krajišnicima, u Narodno-oslobodilačkoj borbi (1941-1945) protiv fašizma, nalazi se na vrhu Banj brda (431m nadmorske visine) koje dominira Banjalukom. Udaljen je oko 5km od Grada, a put je cjelom dužinom asfaltiran.</p>
<p align="justify"><h1>Opis spomenika</h1> <br />Spomenik, mauzolejskog tipa (visine 13 m i dužine 24 m), rad je jednog od najvećih jugoslovenskih kipara i majstora memorijalne plastike Antuna Augustinčića. Podignut je na mjestu gdje je, juna 1941, održana Oblasna konferencija Komunističke partije Jugoslavije za Bosansku krajinu i nekoliko savjetovanja vezanih za podizanje ustanka. Izgrađen je od bijelog bračkog kamena.</p>
<p align="justify">Ima jedinstvenu formu, posebnu dinamičku liniju i gledan iz daljine, djeluje kao metak ispaljen u pravcu Krajine (Kozare i Grmeča).Na pročelju spomenika, iznad ulaznih vrata, nalazi se velika figura nagog mladića koji u ruci drži zastavu. Sa strana Spomenika nalaze se reljefi na kojima je prikazana borba protiv okupatora i poslijeratna izgradanja.</p>
<p style="justify"><h1>Legenda o šehitima</h1></p>
<p>Brdo Šehitluci, sa kojeg se pruža vidikovac na centar Banjaluke, dobilo je ime po trojici junaka. Legenda govori o junacima, kojima su u boju odsječene glave sabljama. No, iako su izgubili glave, oni su nastavili put vrha brda zajedno sa glavama u rukama, zastali su na jednom vrelu kako bi oprali svoje okrvavljene vratove, po čemu je vrelo i dobilo ime Vratinac. Izdahnuli su na vrhu brda, na mjestu današnjeg spomenika. Po drugoj verziji ove legende, na tom brdu visokom 431 m, sahranjena su dvojica od trojice turskih šehita (junaka), koji su u boju 1737. godine, posječeni pod Kastelom, ali su se sa galavama u rukama nastavili penjati. Jedan do njih se okrenuo ka gradu i presvisnuo, a preostala dvojica su onako obezglavljena dojahala na vrh brda i tek tamo izdahnuli. Pokopani su u zajednički grob mauzolej, a brdo je po njima nazvano šehitluci.</p>]]></string>
    <string name="banj_url">https://upload.wikimedia.org/wikipedia/sr/b/b2/Spomenik_palim_Kraji%C5%A1nicima.jpg</string>
    <string name="banj_latitude">44.743855</string>
    <string name="banj_longitude">17.163036</string>
    <string name="hotel_atina_name">Hotel Atina</string>
    <string name="hotel_atina_rating">4</string>
    <string name="hotel_atina_url">http://www.banjaluka-tourism.com/images/Smjestaj/atina1.jpg</string>
    <string name="hotel_atina_description"><![CDATA[<p>Slobodana Kokanovića 5<br />Tel: +387(0)51 961 100<br />Email:<a href="mailto:recepcija@atinahotel.com"> recepcija@atinahotel.com<br /></a>Web:<a href="http://www.atinahotel.com"> www.atinahotel.com</a></p>
        <p style="text-align: justify;"><span style="text-align: justify;">Hotel "Atina" se nalazi u neposrednoj blizini poslovnog centra grada, na mirnom i tihom mjestu uz rijeku Vrbas. Hotel nudi klimatizovane sobe i apartmane, kao i predsjedničke apartmane. Raspolaže sa 16 soba i 4 apartmana u kojima je raspoređeno 46 kreveta.</span></p>]]></string>
    <string name="hotel_atina_latitude">44.767091</string>
    <string name="hotel_atina_longitude">17.194462</string>
    <string name="title_activity_item_scrolling">ItemScrollingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="gospodska_name">Gospodska Ulica</string>
    <string name="gospodska_url">http://banjaluka-tourism.com/images/stories/stranice/Kulturno-istorijski_spomenici/Gospodska_ulica.JPG</string>
    <string name="cdata"><![CDATA[html]]></string>
    <string name="title_activity_maps">Map</string>
</resources>