<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather_cloudy_black_48dp"
            android:title="@string/nav_weather"
            />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/title_activity_maps"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_information_outline_black_48dp"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_manage" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_star_black_48dp"
            android:title="@string/tab_favourites"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_pages_black_24dp"
            android:title="@string/tab_news"/>
        <item
            android:id="@+id/nav_institutions"
            android:icon="@drawable/ic_pages_black_24dp"
            android:title="@string/tab_institutions"/>
        <item
            android:id="@+id/nav_monuments"
            android:icon="@drawable/ic_pages_black_24dp"
            android:title="@string/tab_monuments"/>
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_pages_black_24dp"
            android:title="@string/tab_hotels"/>
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_pages_black_24dp"
            android:title="@string/tab_events"/>

    </group>



</menu>
