<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="snap|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>


        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:tabGravity="fill"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_news" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_institutions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_institutions" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_monuments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_monuments" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_hotels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_hotels" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_events" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_favourites" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

</android.support.design.widget.CoordinatorLayout>