<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.CurrentWeatherActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="287dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:background="@color/background"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toEndOf="@+id/current_temp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_temp"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/textColorSecondary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageTemperature"
            app:layout_constraintTop_toTopOf="@+id/imageTemperature" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/textColorSecondary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageHumidity"
            app:layout_constraintTop_toBottomOf="@+id/current_temp" />

        <TextView
            android:id="@+id/windspeed"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/textColorSecondary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageWindSpeed"
            app:layout_constraintTop_toBottomOf="@+id/pressure" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/textColorSecondary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imagePressure"
            app:layout_constraintTop_toBottomOf="@+id/humidity" />

        <ImageView
            android:id="@+id/imagePressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/pressure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageHumidity"
            app:srcCompat="@drawable/ic_gauge_black_48dp" />

        <ImageView
            android:id="@+id/imageHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageTemperature"
            app:srcCompat="@drawable/ic_water_percent_black_48dp" />

        <ImageView
            android:id="@+id/imageTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/current_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_oil_temperature_black_48dp" />

        <ImageView
            android:id="@+id/imageWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/wind_speed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePressure"
            app:srcCompat="@drawable/ic_weather_windy_black_48dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>